# projectdaw

./: .gitignore  CMakeLists.txt  build.cmd  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: server.ts
src/app/components/core/: knob.tsx  volumeslider.tsx
src/app/components/filebrowser/: index.tsx
src/app/components/track/: layout.tsx  timeline.tsx  timelinegrid.tsx  trackcontrol.tsx  trackitem.tsx
src/app/components/transport/: index.tsx
src/app/main/: app.tsx  layout.tsx  root.tsx
src/app/shared/icons/: index.tsx
src/renderer/: index.html  windowed.html
src/renderer/electron/: main.ts  menu.ts  preload.ts  tsconfig.json
src/renderer/main/: index.ts
src/renderer/mixer/: index.html
src/renderer/pianoroll/: index.html
src/renderer/shared/: style.css
src/renderer/webview/: main.cpp  resource.h
src/renderer/webview/audio/: audioengine.cpp  audioengine.hpp
